--- a/_config.yml
+++ b/_config.yml
@@ -18,19 +18,19 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: M2A blog
+email: m2a@my2ndangelic.me
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "/jblog" # the subpath of your site, e.g. /blog
 url: "https://my2ndangelic.me" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+#twitter_username: jekyllrb
+github_username:  my2ndangelic
 
 # Build settings
-theme: minima
+theme: poole
 plugins:
   - jekyll-feed
 
