--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,6 @@
 
-# Created by https://www.toptal.com/developers/gitignore/api/macos,windows,linux,sublimetext,vim,jekyll
-# Edit at https://www.toptal.com/developers/gitignore?templates=macos,windows,linux,sublimetext,vim,jekyll
-
-### Jekyll ###
-_site/
-.sass-cache/
-.jekyll-cache/
-.jekyll-metadata
+# Created by https://www.toptal.com/developers/gitignore/api/windows,macos,linux,sublimetext
+# Edit at https://www.toptal.com/developers/gitignore?templates=windows,macos,linux,sublimetext
 
 ### Linux ###
 *~
@@ -30,7 +24,8 @@ _site/
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
@@ -84,26 +79,6 @@ bh_unicode_properties.cache
 # https://packagecontrol.io/packages/sublime-github
 GitHub.sublime-settings
 
-### Vim ###
-# Swap
-[._]*.s[a-v][a-z]
-!*.svg  # comment out if you don't need vector files
-[._]*.sw[a-p]
-[._]s[a-rt-v][a-z]
-[._]ss[a-gi-z]
-[._]sw[a-p]
-
-# Session
-Session.vim
-Sessionx.vim
-
-# Temporary
-.netrwhist
-# Auto-generated tag files
-tags
-# Persistent undo
-[._]*.un~
-
 ### Windows ###
 # Windows thumbnail cache files
 Thumbs.db
@@ -130,5 +105,4 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
-# End of https://www.toptal.com/developers/gitignore/api/macos,windows,linux,sublimetext,vim,jekyll
-.DS_Store
+# End of https://www.toptal.com/developers/gitignore/api/windows,macos,linux,sublimetext
